--- a/translations/pt.yml
+++ b/translations/pt.yml
@@ -107,3 +107,6 @@ pdf_files: Arquivos PDF
 all_files: Todos os arquivos
 select_language: Selecionar idioma
 logo_type: "Tipo de Logo (abaixo)"
+
+switch_spines_label: Spines de Switch
+download_link: Baixar Aqui
